--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RafBookAndroid"
+        android:theme="@style/Theme.Banka4"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".login.LoginActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Banka4" />
+        <activity
+            android:name=".splash.SplashActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.RafBookAndroid">
+            android:theme="@style/Theme.Banka4">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".user.UserActivity"
+            android:exported="true"/>
     </application>
 
 </manifest>
